--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="user-scalable=no,initial-scale=1, 
 maximum-scale=1,minimum-scale=1, width=device-width" />
         <title>PhoneGap App</title>
- <script src="js/jquery-3.2.1.min.js"></script>   <!-jquery-1.10.2.min is the name of my file>
+ <script src="js/jquery-3.2.1.min.js"></script>   
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript">
 
